image grid layout completed on  route movie/*

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,15 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ],
+      "components/*": [
+        "./src/app/_components/*"
+      ],
+      "lib/*": [
+        "./src/app/_lib/*"
+      ]
     }
   }
 }
