infinite scrolling component in progress

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,6 +9,9 @@
       ],
       "lib/*": [
         "./src/app/_lib/*"
+      ],
+      "hooks/*": [
+        "./src/app/_hooks/*"
       ]
     }
   }
