--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/colors": "^3.0.0",
-    "next": "14.0.1",
+    "next": "^14.0.3",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18"
