--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "^14.0.3",
     "pg": "^8.11.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
